--- a/inicial.html
+++ b/inicial.html
@@ -241,7 +241,7 @@
             </div>
             <div class="nav_list">
                 <div class="nav_item">
-                    <a href="./inicial.html" class="nav_link">
+                    <a href="inicial.html" class="nav_link">
                         <i class='bx bx-home nav_icon'></i>
                         <span id="home" class="nav_name">Home</span>
                     </a>
